--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <section class="hero-banner">
             <div class="container hero-content">
                 <h1>Gastroenteróloga Belice Orellana</h1>
-                <h2>Especialista en Salud Digestiva en San Martín de Porres, Lima</h2>
+                <h2>Especialista en Salud Digestiva en San Martín de Porres, Lima - Perú</h2>
                 <p>Atención profesional y personalizada para una vida digestiva saludable.</p>
                 <div class="cta-buttons">
                     <a href="https://wa.me/51960519372" target="_blank" rel="noopener noreferrer" class="btn primary-btn" title="Agendar cita por WhatsApp"><i class="fa-brands fa-whatsapp"></i> Agendar Cita</a>
