--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                     </div>
                     
                     <div class="mt-4">
-                        <a href="https://200.48.13.39/conoce_a_tu_medico/datos-colegiado-detallado.php?id=046811" class="btn btn-primary">Ver Credenciales Oficiales</a>
+                        <a href="https://aplicaciones.cmp.org.pe/conoce_a_tu_medico/datos-colegiado-detallado.php?id=U1BxMlBvUXpDUHd0Z0dXRU5USkNRUT09" class="btn btn-primary">Ver Credenciales Oficiales</a>
                     </div>
                 </div>
             </div>
@@ -599,7 +599,7 @@
                             </div>
                         </div>
                         
-                        <div class="social-links mt-4">
+                        <div class="social-links mt-4 ">
                             <a href="https://www.facebook.com/belice.orellana.9" title="Facebook">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
