--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
             <hr class="mt-4 mb-4">
             <div class="row">
                 <div class="col-md-6">
-                    <p>&copy; © <script>document.write(new Date().getFullYear());</script> Gastroenteróloga Belice Orellana - Consultorio Gastrocheck Perú. Todos los derechos reservados.</p>
+                    <p>&copy; <script>document.write(new Date().getFullYear());</script> Gastroenteróloga Belice Orellana - Consultorio Gastrocheck Perú. Todos los derechos reservados.</p>
                 </div>
                <!-- <div class="col-md-6 text-md-end">
                     <p>SEO: <a href="https://www.elcubas.com/" class="text-light">www.elcubas.com</a></p>
