--- a/index.html
+++ b/index.html
@@ -299,6 +299,10 @@
             }
         }
         .me-3{color:#075E54;}
+         a {
+      text-decoration: none;
+    }
+    .col-lg-6{margin-top: 1.5rem}
     </style>
 </head>
 <body>
@@ -344,7 +348,7 @@
                     <p>Endoscopias, gastritis, cirrosis hepática, estreñimiento, cáncer de colon y recto, hemorroides, colon irritable, Helicobacter Pylori, enfermedad ulcerosa péptica, hepatitis, pancreatitis y enfermedades de la vesícula biliar.</p>
                     <div class="mt-4">
                         <a href="#contacto" class="btn btn-light btn-outline-light me-3"><i class="fa-brands fa-whatsapp"></i> Solicitar Cita</a>
-                        <a href="#servicios" class="btn btn-primary">Nuestros Servicios</a>
+                       <!-- <a href="#servicios" class="btn btn-primary">Nuestros Servicios</a> -->
                     </div>
                 </div>
                 <div class="col-lg-6">
