--- a/index.html
+++ b/index.html
@@ -718,7 +718,20 @@
                 </div>
             </div>
             <div class="about-image">
-                <img src="./images/gastroenterogiaorellana_bcls92_c_scale,w_1400.webp" alt="Dra. Belice Orellana">
+                <img
+sizes="(max-width: 1400px) 100vw, 1400px"
+srcset="
+./images/gastroenterogiaorellana_bcls92_c_scale,w_200.webp 200w,
+./images/gastroenterogiaorellana_bcls92_c_scale,w_448.webp 448w,
+./images/gastroenterogiaorellana_bcls92_c_scale,w_597.webp 597w,
+./images/gastroenterogiaorellana_bcls92_c_scale,w_802.webp 802w,
+./images/gastroenterogiaorellana_bcls92_c_scale,w_1027.webp 1027w,
+./images/gastroenterogiaorellana_bcls92_c_scale,w_1125.webp 1125w,
+./images/gastroenterogiaorellana_bcls92_c_scale,w_1261.webp 1261w,
+./images/gastroenterogiaorellana_bcls92_c_scale,w_1369.webp 1369w,
+./images/gastroenterogiaorellana_bcls92_c_scale,w_1400.webp 1400w"
+src="./images/gastroenterogiaorellana_bcls92_c_scale,w_1400.webp"
+ alt="Gastroenterologa Orellana">
             </div>
         </div>
     </section>
@@ -904,8 +917,8 @@
 
 /* Fix link contrast */
 a {
-    color: #0056B3 !important; /* Much darker blue */
-    text-decoration: underline; /* Additional visual indicator */
+    color: #004BA3 !important; /* Much darker blue */
+    text-decoration: none; /* Additional visual indicator */
 }
 
 /* Fix footer text contrast */
