--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <style>
         /* Estilos generales */
         :root {
-            --primary-color: #2c3e50;
+            --primary-color: #004BA3; /*#2c3e50;*/
             --secondary-color: #3498db;
             --accent-color: #e74c3c;
             --light-color: #ecf0f1;
@@ -916,11 +916,7 @@ src="./images/gastroenterogiaorellana_bcls92_c_scale,w_1400.webp"
     background-color: #C23B22; /* Darker red for better contrast */
 }
 
-/* Fix link contrast */
-a {
-    color: #004BA3 !important; /* Much darker blue */
-    text-decoration: none; /* Additional visual indicator */
-}
+
 
 /* Fix footer text contrast */
 footer, .footer-column, footer a {
