--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
         <div class="container">
             <div class="about-content">
                 <h2>Sobre la Dra. Belice Orellana</h2>
-                <p>Graduada y especializada en la Escuela Latinoamericana De Medicina de La Habana, Cuba, la Dra. Orellana cuenta con un título reconocido por la Asamblea Nacional de Rectores del Perú (<a href="https://200.48.13.39/conoce_a_tu_medico/datos-colegiado-detallado.php?id=046811">CMP 46811, RNE 024685</a>).</p>
+                <p>Graduada y especializada en la Escuela Latinoamericana De Medicina de La Habana, Cuba, la Dra. Orellana cuenta con un título reconocido por la Asamblea Nacional de Rectores del Perú (<a href="https://aplicaciones.cmp.org.pe/conoce_a_tu_medico/datos-colegiado-detallado.php?id=U1BxMlBvUXpDUHd0Z0dXRU5USkNRUT09">CMP 46811, RNE 024685</a>).</p>
                 <p>Con más de una década de experiencia, ha trabajado en diversas instituciones médicas en Perú, Cuba y Venezuela, ofreciendo siempre la mejor atención a sus pacientes.</p>
                 
                 <h3>Experiencia y Educación</h3>
@@ -719,20 +719,26 @@
                 </div>
             </div>
             <div class="about-image">
-                <img
-sizes="(max-width: 1400px) 100vw, 1400px"
-srcset="
-./images/gastroenterogiaorellana_bcls92_c_scale,w_200.webp 200w,
-./images/gastroenterogiaorellana_bcls92_c_scale,w_448.webp 448w,
-./images/gastroenterogiaorellana_bcls92_c_scale,w_597.webp 597w,
-./images/gastroenterogiaorellana_bcls92_c_scale,w_802.webp 802w,
-./images/gastroenterogiaorellana_bcls92_c_scale,w_1027.webp 1027w,
-./images/gastroenterogiaorellana_bcls92_c_scale,w_1125.webp 1125w,
-./images/gastroenterogiaorellana_bcls92_c_scale,w_1261.webp 1261w,
-./images/gastroenterogiaorellana_bcls92_c_scale,w_1369.webp 1369w,
-./images/gastroenterogiaorellana_bcls92_c_scale,w_1400.webp 1400w"
-src="./images/gastroenterogiaorellana_bcls92_c_scale,w_1400.webp"
- alt="Gastroenterologa Orellana">
+               <img 
+    src="https://www.gastroenterologabeliceorellana.com/images/gastroenterogiaorellana_bcls92_c_scale,w_1400.webp" 
+    srcset="
+        https://www.gastroenterologabeliceorellana.com/images/gastroenterogiaorellana_bcls92_c_scale,w_200.webp 200w,
+        https://www.gastroenterologabeliceorellana.com/images/gastroenterogiaorellana_bcls92_c_scale,w_448.webp 448w,
+        https://www.gastroenterologabeliceorellana.com/images/gastroenterogiaorellana_bcls92_c_scale,w_597.webp 597w,
+        https://www.gastroenterologabeliceorellana.com/images/gastroenterogiaorellana_bcls92_c_scale,w_802.webp 802w,
+        https://www.gastroenterologabeliceorellana.com/images/gastroenterogiaorellana_bcls92_c_scale,w_1027.webp 1027w,
+        https://www.gastroenterologabeliceorellana.com/images/gastroenterogiaorellana_bcls92_c_scale,w_1125.webp 1125w,
+        https://www.gastroenterologaeliceorellana.com/images/gastroenterogiaorellana_bcls92_c_scale,w_1261.webp 1261w,
+        https://www.gastroenterologabeliceorellana.com/images/gastroenterogiaorellana_bcls92_c_scale,w_1369.webp 1369w,
+        https://www.gastroenterologabeliceorellana.com/images/gastroenterogiaorellana_bcls92_c_scale,w_1400.webp 1400w" 
+    sizes="(max-width: 768px) 100vw, (max-width: 992px) 75vw, 546px" 
+    alt="Clínica de Gastroenterología Gastrocheck" 
+    class="img-fluid rounded shadow"
+    loading="lazy" 
+    width="546" 
+    height="546"
+    fetchpriority=high
+>
             </div>
         </div>
     </section>
@@ -859,7 +865,7 @@ src="./images/gastroenterogiaorellana_bcls92_c_scale,w_1400.webp"
                 <div class="footer-column">
                     <h3>Enlaces Rápidos</h3>
                     <ul>
-                        <li><a href="https://200.48.13.39/conoce_a_tu_medico/datos-colegiado-detallado.php?id=046811">Perfil en Colegio Médico del Perú</a></li>
+                        <li><a href="https://aplicaciones.cmp.org.pe/conoce_a_tu_medico/datos-colegiado-detallado.php?id=U1BxMlBvUXpDUHd0Z0dXRU5USkNRUT09">Perfil en Colegio Médico del Perú</a></li>
                         <li><a href="#servicios">Servicios</a></li>
                         <li><a href="#curriculum">Curriculum</a></li>
                     </ul>
