--- a/index.html
+++ b/index.html
@@ -552,6 +552,7 @@
             .social-icons {
                 display: none;
             }
+            .social-icons-footer{display: flex;}
             
             .hamburger {
                 display: flex;
@@ -873,7 +874,7 @@
                 
                 <div class="footer-column">
                     <h3>Síguenos</h3>
-                    <div class="social-icons">
+                    <div class="social-icons social-icons-footer">
                         <a href="https://www.facebook.com/belice.orellana.9" title="Facebook">FB</a>
                         <a href="https://www.instagram.com/gastrocheckperucuba/" title="Instagram">IG</a>
                         <a href="https://wa.me/51960519372" title="Whatsapp">WA</a>
@@ -924,10 +925,10 @@
 
 
 
-/* Fix footer text contrast */
+/* Fix footer text contrast 
 footer, .footer-column, footer a {
     color: #E8E8E8 !important; /* Lighter text on dark background */
-}
+}*/
 
 /* Ensure body text contrast */
 body {
