--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         /* Estilos generales */
         :root {
             --primary-color: #004BA3; /*#2c3e50;*/
-            --secondary-color: #3498db;
+            --secondary-color: #155C8E; /* #3498db;*/
             --accent-color: #e74c3c;
             --light-color: #ecf0f1;
             --dark-color: #2c3e50;
