--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
     </nav>
     
     <!-- Hero Section -->
-    <section class="hero" fetchpriority="high">
+    <section  fetchpriority=high class="hero" fetchpriority="high">
         <div class="container">
             <div class="hero-content">
                 <h1>Gastroenteróloga Belice Orellana</h1>
@@ -729,7 +729,7 @@
                 </div>
             </div>
             <div class="about-image">
-               <img 
+     <img 
     src="https://www.gastroenterologabeliceorellana.com/images/gastroenterogiaorellana_bcls92_c_scale,w_1400.webp" 
     srcset="
         https://www.gastroenterologabeliceorellana.com/images/gastroenterogiaorellana_bcls92_c_scale,w_200.webp 200w,
@@ -738,7 +738,7 @@
         https://www.gastroenterologabeliceorellana.com/images/gastroenterogiaorellana_bcls92_c_scale,w_802.webp 802w,
         https://www.gastroenterologabeliceorellana.com/images/gastroenterogiaorellana_bcls92_c_scale,w_1027.webp 1027w,
         https://www.gastroenterologabeliceorellana.com/images/gastroenterogiaorellana_bcls92_c_scale,w_1125.webp 1125w,
-        https://www.gastroenterologaeliceorellana.com/images/gastroenterogiaorellana_bcls92_c_scale,w_1261.webp 1261w,
+        https://www.gastroenterologabeliceorellana.com/images/gastroenterogiaorellana_bcls92_c_scale,w_1261.webp 1261w,
         https://www.gastroenterologabeliceorellana.com/images/gastroenterogiaorellana_bcls92_c_scale,w_1369.webp 1369w,
         https://www.gastroenterologabeliceorellana.com/images/gastroenterogiaorellana_bcls92_c_scale,w_1400.webp 1400w" 
     sizes="(max-width: 768px) 100vw, (max-width: 992px) 75vw, 546px" 
@@ -747,7 +747,7 @@
     loading="lazy" 
     width="546" 
     height="546"
-    fetchpriority=high
+    fetchpriority="high"
 >
             </div>
         </div>
