--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     }
     </script>
     <link rel="canonical" href="https://www.gastroenterologabeliceorellana.com/" />
-    
+    <link rel="preload" as="image" href="./images/gastroenterogiaorellana_bcls92_c_scale,w_1400.webp" fetchpriority="high">
     <style>
         /* Estilos generales */
         :root {
@@ -250,6 +250,7 @@
             align-items: center;
             color: var(--white);
             text-align: center;
+            fetchpriority:high;
         }
         
         .hero-content {
