--- a/index (2).html
+++ b/index (2).html
@@ -887,7 +887,7 @@
             
             <div class="footer-bottom">
                 <p>&copy; <script>document.write(new Date().getFullYear());</script> Gastroenteróloga Belice Orellana - Todos los derechos reservados</p>
-                <p><a style="color:#EDEDED" href="https://www.gastroenterologabeliceorellana.com/">www.gastroenterologabeliceorellana.com</a></p>
+                <p><a href="https://www.gastroenterologabeliceorellana.com/">www.gastroenterologabeliceorellana.com</a></p>
             </div>
         </div>
     </footer>
