--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             </ul>
             <div class="social-icons">
                 <a href="https://www.facebook.com/belice.orellana.9" title="Facebook" aria-label="Visita nuestra página de Facebook">FB</a>
-                <a href="https://www.instagram.com/gastrocheckperucuba/" title="Instagram" aria-label="Síguenos en Instagram">IG</a>
+                <a href="https://www.instagram.com/gastrobelice.peru/" title="Instagram" aria-label="Síguenos en Instagram">IG</a>
                 <a href="https://wa.me/51960519372" title="Whatsapp" aria-label="Contáctanos por WhatsApp">WA</a>
                 <a href="tel:51960519372" title="Teléfono" aria-label="Llámanos por teléfono">T</a>
             </div>
@@ -572,7 +572,7 @@
                     <h3>Síguenos</h3>
                     <div class="social-icons social-icons-footer">
                         <a href="https://www.facebook.com/belice.orellana.9" title="Facebook" aria-label="Visita nuestra página de Facebook">FB</a>
-                        <a href="https://www.instagram.com/gastrocheckperucuba/" title="Instagram" aria-label="Síguenos en Instagram">IG</a>
+                        <a href="https://www.instagram.com/gastrobelice.peru/" title="Instagram" aria-label="Síguenos en Instagram">IG</a>
                         <a href="https://wa.me/51960519372" title="Whatsapp" aria-label="Contáctanos por WhatsApp">WA</a>
                     </div>
                 </div>
