--- a/index.html
+++ b/index.html
@@ -580,8 +580,11 @@
             
             <div class="footer-bottom">
                 <p>&copy; <span id="current-year"></span> Gastroenteróloga Belice Orellana - Todos los derechos reservados</p>
-                <p><a  href="https://www.gastroenterologabeliceorellana.com/">www.gastroenterologabeliceorellana.com</a></p>
-                <p class="webmaster"><a title="webmaster: +51971363165" href="https://wa.me/+51971363165?text=Hola%20webmaster">webmaster</a></p>
+                <p><a  href="#">www.gastroenterologabeliceorellana.com</a></p>
+                <p class="webmaster"><a title="webmaster: +51971363165" href="https://api.whatsapp.com/send?phone=+51971363165&text=P%C3%A1ginas%20web%20desde%20Per%C3%BA%20para%20todo%20el%20mundo,%20pagos%20por%20yape%20o%20paypal%20">webmaster 🌐</a>
+
+
+            </p>
             </div>
         </div>
     </footer>
@@ -955,6 +958,7 @@
 
 
 .webmaster {text-align: right;
+    margin-top: 9rem;
          }   
              .footer-bottom a{
         color:#EDEDED; text-decoration:none; }       
