--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
             <div class="footer-bottom">
                 <p>&copy; <span id="current-year"></span> Gastroenteróloga Belice Orellana - Todos los derechos reservados</p>
                 <p><a  href="#">www.gastroenterologabeliceorellana.com</a></p>
-                <p class="webmaster"><a title="webmaster: +51971363165" href="https://api.whatsapp.com/send?phone=+51971363165&text=P%C3%A1ginas%20web%20desde%20Per%C3%BA%20para%20todo%20el%20mundo,%20pagos%20por%20yape%20o%20paypal%20">webmaster 🌐</a>
+                <p class="webmaster"><a title="webmaster: +51971363165" href="https://api.whatsapp.com/send?phone=+51971363165&text=Servicio%20de%20desarrollo%20de%20p%C3%A1ginas%20web.%0A%20Precios%20desde%20$100%20al%20a%C3%B1o.%0A%20Consultas%20sin%20compromiso.">webmaster 🌐</a>
 
 
             </p>
