--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
     <link rel="icon" href="https://www.gastroenterologabeliceorellana.com/favicon.ico" type="image/x-icon">
     
     <!-- Preconexión y precarga de recursos críticos -->
+    <!--
     <link rel="preconnect" href="https://www.google.com">
     <link rel="preconnect" href="https://maps.google.com">
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+    -->
     
     <!-- Precarga de la imagen principal -->
     <link rel="preload" as="image" href="https://www.gastroenterologabeliceorellana.com/cdn-cgi/image/width=auto,format=auto,fit=cover,/images/gastroenterogiaorellana_bcls92_c_scale,w_1400.webp" fetchpriority="high">
@@ -94,7 +96,7 @@
             --light-color: #ecf0f1;
             --dark-color: #2c3e50;
             --text-color: #333;
-            --text-light: #7f8c8d;
+            --text-light: #4A4F4F;/* #7f8c8d;*/
             --white: #fff;
             --shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             --transition: all 0.3s ease;
