--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    
     
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://www.gastroenterologabeliceorellana.com/">
+    <link rel="canonical" href="https://gastroenterologabeliceorellana.com/">
     
     <!-- Favicon -->
     <link rel="icon" href="https://www.gastroenterologabeliceorellana.com/favicon.ico" type="image/x-icon">
