Improve SEO structured data and hreflang

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://gastroenterologabeliceorellana.com/">
+    <link rel="alternate" href="https://gastroenterologabeliceorellana.com/" hreflang="es-PE">
+    <link rel="alternate" href="https://gastroenterologabeliceorellana.com/" hreflang="es">
+    <link rel="alternate" href="https://gastroenterologabeliceorellana.com/" hreflang="x-default">
     <title>Doctora Belice Orellana - Especialista en Gastroenterología en Lima</title>
     <meta name="description" content="Médico cirujano especializada en gastroenterología con más de 20 años de experiencia, diagnóstico preciso y tratamiento de enfermedades gástricas y gastrointestinales">
     
@@ -60,8 +63,16 @@
         "streetAddress": "Acacias & Gladiolos, San Martín de Porres, Lima - Perú",
         "addressLocality": "San Martín de Porres",
         "addressRegion": "Lima",
-        "addressCountry": "Perú"
+        "addressCountry": "PE"
       },
+      "areaServed": {
+        "@type": "AdministrativeArea",
+        "name": "Lima, Perú"
+      },
+      "sameAs": [
+        "https://www.facebook.com/belice.orellana.9",
+        "https://www.instagram.com/gastrobelice.peru/"
+      ],
       "url": "https://gastroenterologabeliceorellana.com/",
       "priceRange": "$$",
       "medicalSpecialty": "Gastroenterology",
@@ -92,6 +103,76 @@
           }
         ]
       }
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Doctora Belice Orellana",
+      "url": "https://gastroenterologabeliceorellana.com/",
+      "inLanguage": "es-PE",
+      "publisher": {
+        "@type": "MedicalBusiness",
+        "name": "Doctora Belice Orellana",
+        "url": "https://gastroenterologabeliceorellana.com/"
+      }
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "¿Cuándo debo consultar a un gastroenterólogo?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Se recomienda consultar si experimenta dolor abdominal persistente, acidez frecuente, cambios en el hábito intestinal, sangrado digestivo o pérdida de peso no intencional. Síntomas como dificultad para tragar, náuseas persistentes o hinchazón abdominal también justifican una evaluación especializada."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "¿Qué preparación necesito para una endoscopia?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Requiere ayuno de 8 horas para alimentos sólidos y 4 horas para líquidos claros. Le proporcionaremos instrucciones detalladas según su caso particular durante la cita de evaluación. Es importante informar sobre medicamentos que esté tomando, especialmente anticoagulantes. El procedimiento se realiza con sedación para mayor comodidad."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "¿A qué edad debo hacerme una colonoscopia?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Se recomienda el tamizaje a partir de los 45 años, o antes si hay factores de riesgo familiar. Pacientes con antecedentes de cáncer colorrectal en la familia pueden necesitar comenzar antes, generalmente 10 años antes de la edad del diagnóstico del familiar más joven."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "¿La gastritis tiene cura?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "La gastritis aguda generalmente responde bien al tratamiento y cambios en el estilo de vida. La gastritis crónica puede requerir manejo a largo plazo con medicamentos, erradicación de H. pylori si está presente y modificaciones dietéticas."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "¿Qué es el síndrome de intestino irritable?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Es un trastorno funcional caracterizado por dolor abdominal y cambios en el hábito intestinal sin evidencia de enfermedad orgánica. El manejo incluye identificación de desencadenantes, ajustes dietéticos, manejo del estrés y, en algunos casos, medicación."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "¿Con qué frecuencia debo realizarme chequeos digestivos?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Depende de su edad, factores de riesgo y síntomas. Personas sanas sin antecedentes pueden necesitar evaluación a partir de los 45-50 años. Pacientes con condiciones crónicas pueden requerir seguimiento regular. Consulte para un plan personalizado."
+          }
+        }
+      ]
     }
     </script>
     
