--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         "streetAddress": "Acacias & Gladiolos, San Martín de Porres, Lima - Perú",
         "addressLocality": "San Martín de Porres",
         "addressRegion": "Lima",
-        "addressCountry": "Perú"
+        "addressCountry": "PE"
       },
       "url": "https://gastroenterologabeliceorellana.com/",
       "priceRange": "$$",
