--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
      
     <!-- Autor y derechos -->
-    <meta name="author" content="Gastroenteróloga Belice Orellana Merino | Lima - Perú">
+    <meta name="author" content="Gastroenteróloga Belice Orellana Merino">
     <meta name="robots" content="index, follow">
     
     <!-- Open Graph / Facebook -->
