Consolida marcado JSON-LD en un solo bloque

--- a/index.html
+++ b/index.html
@@ -63,155 +63,153 @@
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "MedicalBusiness",
-      "@id": "https://gastroenterologabeliceorellana.com/#medicalbusiness",
-      "name": "Médica cirujana especialista en gastroenterología y endoscopias",
-      "description": "Soy médico cirujana (CMP 46811), gastroenteróloga (RNE 024685), endoscopista y hepatóloga. Atiendo en Lima-Perú enfermedades digestivas y hepáticas.",
-      "image": "https://gastroenterologabeliceorellana.com/cdn-cgi/image/width=auto,format=auto,fit=cover,/images/gastroenterogiaorellana_bcls92_c_scale,w_1400.webp",
-      "telephone": "+51960519372",
-      "email": "hola@gastroenterologabeliceorellana.com",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Acacias & Gladiolos, San Martín de Porres, Lima - Perú",
-        "addressLocality": "San Martín de Porres",
-        "addressRegion": "Lima",
-        "addressCountry": "PE"
-      },
-      "location": [
+      "@graph": [
         {
-          "@type": "Place",
-          "name": "Consultorio Gastrocheck - San Martín de Porres",
+          "@type": "MedicalBusiness",
+          "@id": "https://gastroenterologabeliceorellana.com/#medicalbusiness",
+          "name": "Médica cirujana especialista en gastroenterología y endoscopias",
+          "description": "Soy médico cirujana (CMP 46811), gastroenteróloga (RNE 024685), endoscopista y hepatóloga. Atiendo en Lima-Perú enfermedades digestivas y hepáticas.",
+          "image": "https://gastroenterologabeliceorellana.com/cdn-cgi/image/width=auto,format=auto,fit=cover,/images/gastroenterogiaorellana_bcls92_c_scale,w_1400.webp",
+          "telephone": "+51960519372",
+          "email": "hola@gastroenterologabeliceorellana.com",
           "address": {
             "@type": "PostalAddress",
-            "streetAddress": "Urb. Los Jazmines del Naranjal Mz F1 Lt 11, esquina de Acacias & Gladiolos",
+            "streetAddress": "Acacias & Gladiolos, San Martín de Porres, Lima - Perú",
             "addressLocality": "San Martín de Porres",
             "addressRegion": "Lima",
             "addressCountry": "PE"
-          }
-        },
-        {
-          "@type": "Place",
-          "name": "Consultorio Revital - Comas",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "Av. Túpac Amaru 1855",
-            "addressLocality": "Comas",
-            "addressRegion": "Lima",
-            "addressCountry": "PE"
-          }
-        }
-      ],
-      "areaServed": {
-        "@type": "AdministrativeArea",
-        "name": "Lima, Perú"
-      },
-      "sameAs": [
-        "https://www.facebook.com/belice.orellana.9",
-        "https://www.instagram.com/gastrobelice.peru/"
-      ],
-      "url": "https://gastroenterologabeliceorellana.com/",
-      "hasMap": "https://www.google.com/maps/place/Gastroenter%C3%B3loga+Belice+Orellana+Consultorio+Gastrocheck/@-11.979028,-77.084889,18z/data=!4m5!3m4!1s0x9105d134fd0a6165:0xaf40dadfa2c1afc5!8m2!3d-11.978878!4d-77.0849874?hl=es",
-      "geo": {
-        "@type": "GeoCoordinates",
-        "latitude": -11.9788757,
-        "longitude": -77.0849874
-      },
-      "priceRange": "$$",
-      "medicalSpecialty": "Gastroenterology",
-      "hasOfferCatalog": {
-        "@type": "OfferCatalog",
-        "name": "Servicios de Gastroenterología",
-        "itemListElement": [
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "Endoscopias"
-            }
           },
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "Diagnóstico de Cáncer de Colon y Recto"
+          "location": [
+            {
+              "@type": "Place",
+              "name": "Consultorio Gastrocheck - San Martín de Porres",
+              "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "Urb. Los Jazmines del Naranjal Mz F1 Lt 11, esquina de Acacias & Gladiolos",
+                "addressLocality": "San Martín de Porres",
+                "addressRegion": "Lima",
+                "addressCountry": "PE"
+              }
+            },
+            {
+              "@type": "Place",
+              "name": "Consultorio Revital - Comas",
+              "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "Av. Túpac Amaru 1855",
+                "addressLocality": "Comas",
+                "addressRegion": "Lima",
+                "addressCountry": "PE"
+              }
             }
+          ],
+          "areaServed": {
+            "@type": "AdministrativeArea",
+            "name": "Lima, Perú"
           },
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "Tratamiento de Gastritis y Cirrosis Hepática"
+          "sameAs": [
+            "https://www.facebook.com/belice.orellana.9",
+            "https://www.instagram.com/gastrobelice.peru/"
+          ],
+          "url": "https://gastroenterologabeliceorellana.com/",
+          "hasMap": "https://www.google.com/maps/place/Gastroenter%C3%B3loga+Belice+Orellana+Consultorio+Gastrocheck/@-11.979028,-77.084889,18z/data=!4m5!3m4!1s0x9105d134fd0a6165:0xaf40dadfa2c1afc5!8m2!3d-11.978878!4d-77.0849874?hl=es",
+          "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": -11.9788757,
+            "longitude": -77.0849874
+          },
+          "priceRange": "$$",
+          "medicalSpecialty": "Gastroenterology",
+          "hasOfferCatalog": {
+            "@type": "OfferCatalog",
+            "name": "Servicios de Gastroenterología",
+            "itemListElement": [
+              {
+                "@type": "Offer",
+                "itemOffered": {
+                  "@type": "Service",
+                  "name": "Endoscopias"
+                }
+              },
+              {
+                "@type": "Offer",
+                "itemOffered": {
+                  "@type": "Service",
+                  "name": "Diagnóstico de Cáncer de Colon y Recto"
+                }
+              },
+              {
+                "@type": "Offer",
+                "itemOffered": {
+                  "@type": "Service",
+                  "name": "Tratamiento de Gastritis y Cirrosis Hepática"
+                }
+              }
+            ]
+          }
+        },
+        {
+          "@type": "WebSite",
+          "@id": "https://gastroenterologabeliceorellana.com/#website",
+          "name": "Gastroenteróloga Belice Orellana Merino | Lima - Perú",
+          "url": "https://gastroenterologabeliceorellana.com/",
+          "inLanguage": "es-PE",
+          "publisher": {
+            "@id": "https://gastroenterologabeliceorellana.com/#medicalbusiness"
+          }
+        },
+        {
+          "@type": "FAQPage",
+          "mainEntity": [
+            {
+              "@type": "Question",
+              "name": "¿Cuándo debo consultar a un gastroenterólogo?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Se recomienda consultar si experimenta dolor abdominal persistente, acidez frecuente, cambios en el hábito intestinal, sangrado digestivo o pérdida de peso no intencional. Síntomas como dificultad para tragar, náuseas persistentes o hinchazón abdominal también justifican una evaluación especializada."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "¿Qué preparación necesito para una endoscopia?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Requiere ayuno de 8 horas para alimentos sólidos y 4 horas para líquidos claros. Le proporcionaremos instrucciones detalladas según su caso particular durante la cita de evaluación. Es importante informar sobre medicamentos que esté tomando, especialmente anticoagulantes. El procedimiento se realiza con sedación para mayor comodidad."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "¿A qué edad debo hacerme una colonoscopia?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Se recomienda el tamizaje a partir de los 45 años, o antes si hay factores de riesgo familiar. Pacientes con antecedentes de cáncer colorrectal en la familia pueden necesitar comenzar antes, generalmente 10 años antes de la edad del diagnóstico del familiar más joven."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "¿La gastritis tiene cura?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "La gastritis aguda generalmente responde bien al tratamiento y cambios en el estilo de vida. La gastritis crónica puede requerir manejo a largo plazo con medicamentos, erradicación de H. pylori si está presente y modificaciones dietéticas."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "¿Qué es el síndrome de intestino irritable?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Es un trastorno funcional caracterizado por dolor abdominal y cambios en el hábito intestinal sin evidencia de enfermedad orgánica. El manejo incluye identificación de desencadenantes, ajustes dietéticos, manejo del estrés y, en algunos casos, medicación."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "¿Con qué frecuencia debo realizarme chequeos digestivos?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Depende de su edad, factores de riesgo y síntomas. Personas sanas sin antecedentes pueden necesitar evaluación a partir de los 45-50 años. Pacientes con condiciones crónicas pueden requerir seguimiento regular. Consulte para un plan personalizado."
+              }
             }
-          }
-        ]
-      }
-    }
-    </script>
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebSite",
-      "@id": "https://gastroenterologabeliceorellana.com/#website",
-      "name": "Gastroenteróloga Belice Orellana Merino | Lima - Perú",
-      "url": "https://gastroenterologabeliceorellana.com/",
-      "inLanguage": "es-PE",
-      "publisher": {
-        "@id": "https://gastroenterologabeliceorellana.com/#medicalbusiness"
-      }
-    }
-    </script>
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "FAQPage",
-      "mainEntity": [
-        {
-          "@type": "Question",
-          "name": "¿Cuándo debo consultar a un gastroenterólogo?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Se recomienda consultar si experimenta dolor abdominal persistente, acidez frecuente, cambios en el hábito intestinal, sangrado digestivo o pérdida de peso no intencional. Síntomas como dificultad para tragar, náuseas persistentes o hinchazón abdominal también justifican una evaluación especializada."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "¿Qué preparación necesito para una endoscopia?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Requiere ayuno de 8 horas para alimentos sólidos y 4 horas para líquidos claros. Le proporcionaremos instrucciones detalladas según su caso particular durante la cita de evaluación. Es importante informar sobre medicamentos que esté tomando, especialmente anticoagulantes. El procedimiento se realiza con sedación para mayor comodidad."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "¿A qué edad debo hacerme una colonoscopia?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Se recomienda el tamizaje a partir de los 45 años, o antes si hay factores de riesgo familiar. Pacientes con antecedentes de cáncer colorrectal en la familia pueden necesitar comenzar antes, generalmente 10 años antes de la edad del diagnóstico del familiar más joven."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "¿La gastritis tiene cura?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "La gastritis aguda generalmente responde bien al tratamiento y cambios en el estilo de vida. La gastritis crónica puede requerir manejo a largo plazo con medicamentos, erradicación de H. pylori si está presente y modificaciones dietéticas."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "¿Qué es el síndrome de intestino irritable?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Es un trastorno funcional caracterizado por dolor abdominal y cambios en el hábito intestinal sin evidencia de enfermedad orgánica. El manejo incluye identificación de desencadenantes, ajustes dietéticos, manejo del estrés y, en algunos casos, medicación."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "¿Con qué frecuencia debo realizarme chequeos digestivos?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Depende de su edad, factores de riesgo y síntomas. Personas sanas sin antecedentes pueden necesitar evaluación a partir de los 45-50 años. Pacientes con condiciones crónicas pueden requerir seguimiento regular. Consulte para un plan personalizado."
-          }
+          ]
         }
       ]
     }
